# 4k-video-downloader-clone

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: app_builder.yml
src/: App.vue  main.js  style.css
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-01-05-144416_create_smartmode_table/: down.sql  up.sql
src-tauri/migrations/2023-01-06-084818_create_preferences_table/: down.sql  up.sql
src-tauri/migrations/2023-01-06-163532_create_downloads_table/: down.sql  up.sql
src-tauri/src/: downloader.rs  events_names.rs  main.rs  schema.rs  tauri_commands.rs
src-tauri/src/db/: downloads.rs  mod.rs  models.rs  preferences.rs  smart_mode.rs
src-tauri/src/db/models/: download.rs  mod.rs  preferences.rs  smart_mode.rs
src-tauri/src/file_system/: file_system.rs  mod.rs
src-tauri/src/youtube_downloader/: downloader.rs  helpers.rs  mod.rs  models.rs  playlist.rs  stream.rs  video.rs
src-tauri/src/youtube_downloader/models/: lookups.rs  mod.rs  playlist.rs  video.rs
src/components/: AppFooter.vue  AppHeader.vue  ConnectionPreferences.vue  EmptyList.vue  GeneralPreferences.vue  NotificationsPreferences.vue  VideoListItem.vue  VideosList.vue
src/helpers/: filters.js
src/pages/: DownloadClip.vue  Home.vue  Preferences.vue  SmartMode.vue
src/router/: index.js
src/stores/: AppUpdatesStore.js  DownloadsStore.js  GeneralPreferencesStore.js  PreferencesStore.js  SmartModeStore.js
