[package]
name = "clone-4k-video-downloader"
version = "0.1.0"
description = "A Tauri App"
authors = ["Hussein Dossoki"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
ytextract="*"
strum = "*"
strum_macros = "*"
serde-enum-str = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["clipboard-all", "dialog-all", "fs-all", "shell-open", "window-all"] }
futures = "*"
# rustube = { version = "0.6.0", features = ["callback"] } # Offical package
rustube = { git = "https://github.com/Discursif/rustube", branch = "master", features = ["callback"]  } # Forked from rustube to Fix download speed issue (Not stable)
diesel = { version = "1.4.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.10"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
# strip = true  # Automatically strip symbols from the binary.